--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Awesome specialist developers group 
   for creating new mobile applications and web sites for cover your necessities
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://tecla5.com" # the base hostname & protocol for your site
+url: "http://blog.tecla5.com" # the base hostname & protocol for your site
 twitter_username: jcc2303
 github_username:  tecla5
 
